# qmk_hid

./: .eslintrc  .gitignore  app.ts  main.ts  package-lock.json  package.json  pm2.config.js  tsconfig.json
assets/fonts/: Pixolletta10.fnt  Pixolletta13.fnt  Pixolletta14.fnt
assets/fonts/PixelOperator12/: index.fnt
assets/fonts/PixelOperator14/: index.fnt
assets/fonts/PixelOperator16/: index.fnt
assets/fonts/PixelOperator17/: index.fnt
assets/fonts/Pixeled/: Pixeled14.fnt
modules/: bytes.ts  command.ts  fp.ts  func.ts  hid.ts  image.js  image.ts  keyboard.js  keyboard.ts  oled.ts  renderUtils.ts  screen.ts  timer.ts  wait.ts  widget.ts
modules/hid_watcher/: CMakeLists.txt  hidapi.h  main.cpp
routes/: draw.ts  init.ts
types/: command.ts  common.ts  oled.ts  widget.ts
widgets/: currentTime.ts  rightScreen.ts  socialQr.ts  weather.ts
